--- a/landing page/style.css
+++ b/landing page/style.css
@@ -70,7 +70,7 @@ ul li a:hover{
 }
 .srch{
     height: 30px;
-    border: 4px solid rgb(90, 17, 132);
+    border: 4px solid black;
     border-radius: 5px;
     font-family: 'Times New Roman', Times, serif;
     background: transparent;
@@ -152,13 +152,122 @@ ul li a:hover{
 
 
 .form{
-    width: 250px;
-    
+    width: 280px;
     height: 380px;
     background: linear-gradient(to top,rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-    position: relative;
+    position: absolute;
     top: -20px;
     left: 870px;
     border-radius: 10px;
-    padding: 25px;
+    padding: 20px;
 }
+
+.form h2{
+    width: 220px;
+    font-family: sans-serif;
+    text-align: center;
+    color: #ff7200;
+    font-size: 22px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 8px;
+}
+
+.form input{
+    width: 240px;
+    height: 35px;
+    display: block;
+    /* width: 240px; */
+    outline:none ;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-top: 10px;
+    background: transparent;
+    color: white;
+    outline: none;
+    font-family: Arial;
+    font-size: 16px;
+}
+::placeholder{
+    color:#fff;
+}
+
+.btnn{
+    width: 240px;
+    height: 40px;
+    background-color: #ff7200;
+    cursor: pointer;
+    text-decoration: none;
+    transition:.9s ease all;
+    border: 2px solid black;
+    border-radius: 4px;
+    color: #fff;
+    margin-top: 5px;
+    margin-bottom: 5px;
+
+
+}
+.btnn a{
+    text-decoration: none;
+    font-size: 16px;
+    color: black;
+}
+.btnn:hover{
+    background-color: #fff;
+    color: #ff7200;
+}
+.link{
+    width: 240px;
+    height: 40px;
+    /* border: 2px solid rgb(236, 193, 193);
+    border-radius: 2px; */
+    font-family: 'Times New Roman', Times, serif;
+    margin-bottom: 5px;
+    text-align: center;
+}
+#button{
+    width: 240px;
+    height: 40px;
+    /* border: 4px solid red; */
+    text-align: center;
+    font-size: bold;
+    background-color: #ff7200;
+    background: transparent;
+    
+}
+
+#button a{
+    display: block ;
+    padding:8px  ;
+    color: rgb(6, 1, 1);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    line-height: normal;
+    text-decoration:none!important;
+    cursor: pointer;
+    margin-bottom: 5px;
+    background:#ff7200
+
+    
+}
+
+.liw{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+}
+.icons a{
+    text-decoration: none;
+    color: #fff;
+}
+.icons ion-icon{
+    color: #fff;
+    font-size: 25px;
+    padding-left: 14px;
+    padding-top: 5px;
+}
+.icons ion-icon:hover{
+    transform: scale(1.2) rotate(-9deg);
+    color: #ff7200;
+}
+   
